Executed Actions tab html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8e50b1; }
+  background: #1de793; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7e2a4a; }
+  background: #5f5f79; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f34446; }
+  background: #4c3263; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1f7473; }
+  background: #d9c6ba; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #dcd5d9; }
+  background: #c852a9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #61e806; }
+  background: #e8feed; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c832a7; }
+  background: #4cd194; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #51351e; }
+  background: #e96806; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ea93b6; }
+  background: #806143; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8ef0f3; }
+  background: #a04813; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b1e7ab; }
+  background: #e15aea; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #1728e4; }
+  background: #2b461c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #071875; }
+  background: #f28f75; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #21cd1e; }
+  background: #db5551; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #03f492; }
+  background: #1b3d59; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3f6ebf; }
+  background: #7b3277; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e4473f; }
+  background: #55ab53; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7fe50b; }
+  background: #5965c6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #38e9cc; }
+  background: #0d94cf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6eee2f; }
+  background: #586d3e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ac2a58; }
+  background: #57ffef; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #7d1d20; }
+  background: #589da8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4a7249; }
+  background: #a853df; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #afe938; }
+  background: #968469; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #aae0fe; }
+  background: #8eda9b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9c508c; }
+  background: #e1630a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8f6cd9; }
+  background: #a0d508; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9a7e7a; }
+  background: #e34d1b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #541b20; }
+  background: #f5a7de; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f283d7; }
+  background: #a6af1d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2f6e31; }
+  background: #b88e96; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b4648f; }
+  background: #20f358; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #754b8c; }
+  background: #511869; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #db5cca; }
+  background: #653622; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8165b1; }
+  background: #1dca74; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #dcb632; }
+  background: #a8c8e5; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #17263a; }
+  background: #7b6a7b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #92eff2; }
+  background: #ee0625; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5e9ea6; }
+  background: #b41be9; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #025393; }
+  background: #24c4f3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fa8333; }
+  background: #e09d02; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9be543; }
+  background: #43b734; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #fd6b3f; }
+  background: #ed4791; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #755fdb; }
+  background: #9a6154; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7305c3; }
+  background: #45f7dc; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d0a520; }
+  background: #4f8717; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2473d7; }
+  background: #d7eb6b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #88d4ef; }
+  background: #a88703; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7555ba; }
+  background: #15b902; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #da15f8; }
+  background: #f1f925; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0a0673; }
+  background: #359bc8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7b9f09; }
+  background: #972867; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #78b215; }
+  background: #2f09db; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d2ae0c; }
+  background: #73e527; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bc7e61; }
+  background: #5e4517; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #051acc; }
+  background: #92b260; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #bccc1e; }
+  background: #61077f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #64644b; }
+  background: #1b7e63; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #734c9a; }
+  background: #fac827; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3dab65; }
+  background: #913c49; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #66c674; }
+  background: #40d9db; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a2fb6a; }
+  background: #8e7a82; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0f15c0; }
+  background: #738cc9; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #191fba; }
+  background: #aced10; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7b8418; }
+  background: #fa08c4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e3d238; }
+  background: #024e84; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a2cad6; }
+  background: #219d83; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ae038b; }
+  background: #40741f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #53e687; }
+  background: #e5879f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #89eb46; }
+  background: #5eb5b8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #491abf; }
+  background: #d0ac03; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8ad6ae; }
+  background: #b8ac68; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #edb6ca; }
+  background: #41a8d6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #6c630e; }
+  background: #54f9a4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #43e39e; }
+  background: #653895; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b186ff; }
+  background: #190701; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a31d84; }
+  background: #70885b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7b87c3; }
+  background: #508f4c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3f599a; }
+  background: #04b8e9; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #26c2b9; }
+  background: #452807; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #419580; }
+  background: #57b833; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f8ef0a; }
+  background: #9b3e4c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #bcaddc; }
+  background: #12f380; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #321ff0; }
+  background: #eb1ba0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #25e61c; }
+  background: #502cbf; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #766e9f; }
+  background: #1203f8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #916492; }
+  background: #975d75; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #27083e; }
+  background: #e371d6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #149e0c; }
+  background: #db1163; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #606ec6; }
+  background: #800bc9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fb4b88; }
+  background: #39604c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9cd17d; }
+  background: #da1947; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1a8aa1; }
+  background: #c016aa; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9e05c8; }
+  background: #0444cb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #808a65; }
+  background: #8649a9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #58238a; }
+  background: #ebbea7; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #660af0; }
+  background: #a16c1f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #eebf38; }
+  background: #06d6e6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #271125; }
+  background: #5c686d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6ae392; }
+  background: #9c1235; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9916,7 +9916,7 @@ table .bold-heading {
     left: 12px; }
   .search-wrap-standard input {
     width: 100%;
-    padding: 14px 10px;
+    padding: 10px 10px;
     border: 1px solid #bababa;
     padding-left: 40px;
     border-radius: 40px;
