--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1de793; }
+  background: #478095; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5f5f79; }
+  background: #3bf2fe; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4c3263; }
+  background: #28d301; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d9c6ba; }
+  background: #3e06b6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c852a9; }
+  background: #1df202; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e8feed; }
+  background: #c85b8e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4cd194; }
+  background: #4c3ba9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e96806; }
+  background: #e7dbfc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #806143; }
+  background: #dc0279; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a04813; }
+  background: #90cdd3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e15aea; }
+  background: #9753ee; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2b461c; }
+  background: #1069a5; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f28f75; }
+  background: #bbe1f3; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #db5551; }
+  background: #0f55e1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1b3d59; }
+  background: #62ab61; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7b3277; }
+  background: #07d74e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #55ab53; }
+  background: #b99021; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5965c6; }
+  background: #701261; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0d94cf; }
+  background: #09cf26; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #586d3e; }
+  background: #eea7d2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #57ffef; }
+  background: #6e93af; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #589da8; }
+  background: #bb6232; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a853df; }
+  background: #67709e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #968469; }
+  background: #7eb30d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8eda9b; }
+  background: #d4addb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e1630a; }
+  background: #bbe519; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a0d508; }
+  background: #9e4b76; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e34d1b; }
+  background: #372885; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f5a7de; }
+  background: #ed4379; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a6af1d; }
+  background: #1445ca; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b88e96; }
+  background: #11b680; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #20f358; }
+  background: #78acc5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #511869; }
+  background: #2ddab7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #653622; }
+  background: #d2d264; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1dca74; }
+  background: #4f3d45; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a8c8e5; }
+  background: #0fad04; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7b6a7b; }
+  background: #08ef10; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ee0625; }
+  background: #746902; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b41be9; }
+  background: #72d626; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #24c4f3; }
+  background: #3cae6e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e09d02; }
+  background: #287d63; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #43b734; }
+  background: #b76ae8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ed4791; }
+  background: #90befd; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9a6154; }
+  background: #d8fbd1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #45f7dc; }
+  background: #643319; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4f8717; }
+  background: #7776cd; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d7eb6b; }
+  background: #495c1d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a88703; }
+  background: #34d5cc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #15b902; }
+  background: #ce40f4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f1f925; }
+  background: #211292; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #359bc8; }
+  background: #782ee1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #972867; }
+  background: #8dadf6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2f09db; }
+  background: #ce18d8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #73e527; }
+  background: #3d84b8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5e4517; }
+  background: #9f1365; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #92b260; }
+  background: #76f32c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #61077f; }
+  background: #98f6ff; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #1b7e63; }
+  background: #42d5d3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fac827; }
+  background: #766791; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #913c49; }
+  background: #8d7a59; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #40d9db; }
+  background: #32f630; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8e7a82; }
+  background: #cca2e9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #738cc9; }
+  background: #ff872a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #aced10; }
+  background: #f09e21; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fa08c4; }
+  background: #e940cb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #024e84; }
+  background: #608a4f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #219d83; }
+  background: #cd4220; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #40741f; }
+  background: #b19f5e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #e5879f; }
+  background: #1eb2dd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5eb5b8; }
+  background: #5c1850; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d0ac03; }
+  background: #46ff23; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b8ac68; }
+  background: #cdd7d3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #41a8d6; }
+  background: #eeaff6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #54f9a4; }
+  background: #afe422; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #653895; }
+  background: #ab627c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #190701; }
+  background: #726c53; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #70885b; }
+  background: #bc98c2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #508f4c; }
+  background: #a9a6a7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #04b8e9; }
+  background: #6e55b1; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #452807; }
+  background: #5cbd5b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #57b833; }
+  background: #3c7d94; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9b3e4c; }
+  background: #97f30e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #12f380; }
+  background: #d8d684; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #eb1ba0; }
+  background: #bd3f54; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #502cbf; }
+  background: #79e24c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1203f8; }
+  background: #aa9fc9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #975d75; }
+  background: #1db3c7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e371d6; }
+  background: #4e0e69; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #db1163; }
+  background: #cbf2d7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #800bc9; }
+  background: #f61412; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #39604c; }
+  background: #adda8c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #da1947; }
+  background: #2e7a25; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c016aa; }
+  background: #4c9ca0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0444cb; }
+  background: #24a53a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8649a9; }
+  background: #4dc0a1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ebbea7; }
+  background: #87a254; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a16c1f; }
+  background: #2635de; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #06d6e6; }
+  background: #1a91f1; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5c686d; }
+  background: #4d56b1; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9c1235; }
+  background: #6fcea6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
