sampleweb page update

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #478095; }
+  background: #71c310; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3bf2fe; }
+  background: #7849b2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #28d301; }
+  background: #997d33; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #3e06b6; }
+  background: #4425d2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1df202; }
+  background: #183b2b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c85b8e; }
+  background: #3ba884; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4c3ba9; }
+  background: #24669d; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e7dbfc; }
+  background: #689438; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #dc0279; }
+  background: #0c2efc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #90cdd3; }
+  background: #c08078; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9753ee; }
+  background: #c1aafa; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #1069a5; }
+  background: #ba6a98; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #bbe1f3; }
+  background: #a36a39; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0f55e1; }
+  background: #5d7ae0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #62ab61; }
+  background: #4b0f42; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #07d74e; }
+  background: #6ca190; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b99021; }
+  background: #222ca4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #701261; }
+  background: #cf3c0b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #09cf26; }
+  background: #f114d2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #eea7d2; }
+  background: #de18ee; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6e93af; }
+  background: #0c1068; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bb6232; }
+  background: #e77b28; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #67709e; }
+  background: #3cccb7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7eb30d; }
+  background: #f2028a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d4addb; }
+  background: #906a7c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #bbe519; }
+  background: #49a6e1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9e4b76; }
+  background: #e38055; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #372885; }
+  background: #7d6b05; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ed4379; }
+  background: #d99ca5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1445ca; }
+  background: #9b385e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #11b680; }
+  background: #e6a30e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #78acc5; }
+  background: #bfd0e7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2ddab7; }
+  background: #4d3e35; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d2d264; }
+  background: #3b8537; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4f3d45; }
+  background: #f3747d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0fad04; }
+  background: #c8161f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #08ef10; }
+  background: #a12606; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #746902; }
+  background: #493d04; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #72d626; }
+  background: #fadbfb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #3cae6e; }
+  background: #cb87e9; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #287d63; }
+  background: #272aca; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b76ae8; }
+  background: #7d9458; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #90befd; }
+  background: #b6d764; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d8fbd1; }
+  background: #569755; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #643319; }
+  background: #c44753; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #7776cd; }
+  background: #d14e5f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #495c1d; }
+  background: #0dd794; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #34d5cc; }
+  background: #f49ba2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ce40f4; }
+  background: #8505d1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #211292; }
+  background: #6bebf2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #782ee1; }
+  background: #fafd22; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8dadf6; }
+  background: #45a489; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ce18d8; }
+  background: #ec887f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3d84b8; }
+  background: #be722f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9f1365; }
+  background: #9d445c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #76f32c; }
+  background: #c85cff; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #98f6ff; }
+  background: #d6b32e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #42d5d3; }
+  background: #a90198; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #766791; }
+  background: #082420; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8d7a59; }
+  background: #cc1e46; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #32f630; }
+  background: #59aa3b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #cca2e9; }
+  background: #6302a7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ff872a; }
+  background: #722782; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f09e21; }
+  background: #61f22d; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e940cb; }
+  background: #e17ac8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #608a4f; }
+  background: #2458f2; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #cd4220; }
+  background: #59c1ca; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b19f5e; }
+  background: #c763d2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1eb2dd; }
+  background: #82b00e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5c1850; }
+  background: #f3e140; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #46ff23; }
+  background: #4fd0d1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #cdd7d3; }
+  background: #a7b8c2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #eeaff6; }
+  background: #0cdb5b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #afe422; }
+  background: #42ae08; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ab627c; }
+  background: #6a2076; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #726c53; }
+  background: #7867c0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #bc98c2; }
+  background: #0ddf05; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a9a6a7; }
+  background: #7decdb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6e55b1; }
+  background: #be2401; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5cbd5b; }
+  background: #3f71e6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3c7d94; }
+  background: #08ac24; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #97f30e; }
+  background: #cacf8d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d8d684; }
+  background: #5bcdd1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #bd3f54; }
+  background: #ebd7b8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #79e24c; }
+  background: #da8556; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #aa9fc9; }
+  background: #078fc7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1db3c7; }
+  background: #aa5020; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4e0e69; }
+  background: #5fa759; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cbf2d7; }
+  background: #01a81d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f61412; }
+  background: #8fe824; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #adda8c; }
+  background: #cd7c7c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2e7a25; }
+  background: #624459; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4c9ca0; }
+  background: #8490e6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #24a53a; }
+  background: #16b85b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4dc0a1; }
+  background: #9e429e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #87a254; }
+  background: #c8e034; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2635de; }
+  background: #aacfba; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1a91f1; }
+  background: #e84223; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4d56b1; }
+  background: #4b1b21; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6fcea6; }
+  background: #66e83d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
